fix breadcrumbs truncate

--- a/scss/_eq_breadcrumb.scss
+++ b/scss/_eq_breadcrumb.scss
@@ -46,7 +46,9 @@
         }
 
         &.eq-ui-breadcrumb-item-truncate {
-            @extend .truncate;
+            span {
+                @extend .truncate;
+            }
         }
     }
 
