--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -451,7 +451,7 @@ pre[class*="language-"] {
 }
 
 .truncate {
-	display: inline-flex;
+	display: inline-block;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
